--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -18,28 +18,67 @@ body {
     background-color: var(--dark);
     color:var(--light);
   }
-
+  
+  header h1{
+    box-sizing:border-box;
+    background-color: #86d8d8;
+    color: black;
+  }
   /* calling the nav to order links in a row by justifying content!*/
   nav ul{
     display:flex;
     justify-content: space-between;
     min-width: 300px;
   }
-  /* changed the color of the nav links /
+  /* changed the color of the nav links  */
   nav a{
     color: #86d8d8;
     font-weight: bold;
   }
-  / added hover so that changes the nav color when curoser is hovering */
+
+ /* added hover so that changes the nav color when curoser is hovering  */
   nav a:hover{
     color: var(--light);
   }
   /* added the herobackground and targeted the img HT */
-  .hero-background >img{
+  .hero-background img{
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
     background-size:cover;
     background-position: center;
-    background-image: url("../images/background.jpg")
+    position: relative;
+    
   }
+  /* adds the box but not completely on the cover REVISIT NOT DONE */
+  /* .hero-background > div{
+    margin-right: 75px;
+    position:fixed;
+    right:50px;
+    bottom:530px;
+    padding: 5px;
+    float: right;
+    box-sizing:border-box;
+    background-color: #86d8d8;
+    width: 20%;
+    height: 3%;
+    } */
+    .hero-background div{
+     display:flex;
+     flex-wrap:wrap;
+     align-items: space;
+      position: absolute;
+      float:right;
+      right: -75%;
+      top:800px;
+      background-color:#86d8d8; 
+      padding:10px;
+      margin-right:81%;
+      }
+      .aboutMe h2{
+        margin-left: 10%;
+        font-size: 36px;
+      }
+      
+
+    
