--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -79,6 +79,13 @@ body {
         margin-left: 10%;
         font-size: 36px;
       }
-      
 
+      .aboutMe div {
+        text-align: center;
+        width: 1%;
+        background-color: darkgray;
+        min-height: 50%;
+       
+      }
+    
     
