--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,57 +1,61 @@
-:root{
+:root {
   --dark: #374450;
   --light: #fff;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    line-height: 1.3;
-  }
+  display: flex;
+  flex-direction: column;
+  line-height: 1.3;
+}
 
-  /* made the container for header */
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1%;
-    background-color: var(--dark);
-    color:var(--light);
-  }
-  
-  header h1{
-    box-sizing:border-box;
-    background-color: #86d8d8;
-    color: black;
-  }
-  /* calling the nav to order links in a row by justifying content!*/
-  nav ul{
-    display:flex;
-    justify-content: space-between;
-    min-width: 300px;
-  }
-  /* changed the color of the nav links  */
-  nav a{
-    color: #86d8d8;
-    font-weight: bold;
-  }
+/* made the container for header */
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1%;
+  background-color: var(--dark);
+  color: var(--light);
+}
 
- /* added hover so that changes the nav color when curoser is hovering  */
-  nav a:hover{
-    color: var(--light);
-  }
-  /* added the herobackground and targeted the img HT */
-  .hero-background img{
-    height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-size:cover;
-    background-position: center;
-    position: relative;
-    
-  }
-  /* adds the box but not completely on the cover REVISIT NOT DONE */
-  /* .hero-background > div{
+header h1 {
+  box-sizing: border-box;
+  background-color: #86d8d8;
+  color: black;
+}
+
+/* calling the nav to order links in a row by justifying content!*/
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  min-width: 300px;
+}
+
+/* changed the color of the nav links  */
+nav a {
+  color: #86d8d8;
+  font-weight: bold;
+}
+
+/* added hover so that changes the nav color when curoser is hovering  */
+nav a:hover {
+  color: var(--light);
+}
+
+/* added the herobackground and targeted the img HT */
+.hero-background img {
+  height: 800px;
+  width: 100%;
+  margin-bottom: 25px;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+
+}
+
+/* adds the box but not completely on the cover REVISIT NOT DONE */
+/* .hero-background > div{
     margin-right: 75px;
     position:fixed;
     right:50px;
@@ -63,29 +67,42 @@ body {
     width: 20%;
     height: 3%;
     } */
-    .hero-background div{
-     display:flex;
-     flex-wrap:wrap;
-     align-items: space;
-      position: absolute;
-      float:right;
-      right: -75%;
-      top:800px;
-      background-color:#86d8d8; 
-      padding:10px;
-      margin-right:81%;
-      }
-      .aboutMe h2{
-        margin-left: 10%;
-        font-size: 36px;
-      }
+.hero-background div {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: space;
+  position: absolute;
+  float: right;
+  right: -75%;
+  top: 800px;
+  background-color: #86d8d8;
+  padding: 10px;
+  margin-right: 81%;
+}
 
-      .aboutMe div {
-        text-align: center;
-        width: 1%;
-        background-color: darkgray;
-        min-height: 50%;
-       
-      }
+ .container  h2  {
+  margin-left: 10%;
+  font-size: 36px;
+}
+/*come back for the line  */
+/* .container:after  {
+  display:inline-block;
+ border-right: 4px solid blue;
+ min-height: 100px;
+
+} */
+
+.aboutMe{
+  display:inline-block;
+ border-right: 25px solid blue;
+ min-height: 100px;
+
+}
+ 
+
+
+
+
+
     
     
