--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -87,6 +87,60 @@ nav a:hover {
   margin-left: 20%;
   margin-top: -8%;
 }
+/* creating the boxes  */
+.projects-grid-wrapper {
+    width: 80%;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+}
+
+.projects-grid {
+    width: 70%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 10px;
+}
+
+.project {
+    border: solid;
+    color: black;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    text-decoration: none;
+    background-size: cover;
+    background-position: center;
+    opacity: 0.5;
+}
+
+.project:hover {
+    opacity: 1.0;
+}
+.Surf-Report {
+    grid-column: 1/3;
+    grid-row: span 2;
+  < SRC="./assets/images/coffeeBackground.jpg" alt="background" />
+}
+
+.LEDWall {
+    background-image: url("../Assets/images/coffeecup.jpg");
+    background-position: 50% 15%;
+}
+
+.Calculator {
+    background-image: url("../Assets/images/drinks.jpg");
+    background-position: 60% 50%;
+}
+
+.PastelPuzzels {
+    background-image: url("../Assets/images/coffee puck.jpg");
+}
+
+.RunBuddy {
+    background-image: url("../Assets/images/latte art.jpg");
+}
 
 
 
