--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -67,25 +67,29 @@ nav a:hover {
   padding: 10px;
   margin-right: 81%;
 }
+.title {
+  border-right: 5px solid var(--dark);
+  min-height: 100%;
+  text-align: right;
+  padding-right: 40px;
+  min-width: 20%;
+  max-width: 20%;
+}
 
 /* added the inline block */
 .aboutMe h2{
-  position: relative;
-  width: 100px;
-  text-align: right;
-  margin-left: 10%;
-  display:inline-block;
-  border-right: 4px solid blue;
-  min-height: 100px;
-  font-size: 36px;
-  padding-right: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  padding-top: 30px;
 
 }
 /* tackling the paragraph and moving it  */
 .aboutMe p{
-  position: relative;
-  margin-left: 20%;
-  margin-top: -8%;
+  font-size: 20px;
+  padding: 0 30px;
+  line-height: 1.6;
+  width: 90%;
 }
 /* creating the boxes  */
 .projects-grid-wrapper {
@@ -118,28 +122,43 @@ nav a:hover {
 .project:hover {
     opacity: 1.0;
 }
+.work{
+  padding: 30px 0;
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--dark);
+}
+/* adding the photos to show up */
 .Surf-Report {
     grid-column: 1/3;
     grid-row: span 2;
-  < SRC="./assets/images/coffeeBackground.jpg" alt="background" />
+    height: 600px;
+    width:80%;  
+   
 }
 
 .LEDWall {
-    background-image: url("../Assets/images/coffeecup.jpg");
-    background-position: 50% 15%;
+ background-position: 50% 15% ;
+  height: 600px;
+  width:80%; 
 }
 
 .Calculator {
-    background-image: url("../Assets/images/drinks.jpg");
-    background-position: 60% 50%;
+  background-position: 60% 50%;
+  height: 600px;
+  width:80%; 
 }
 
 .PastelPuzzels {
-    background-image: url("../Assets/images/coffee puck.jpg");
+ 
+  height: 600px;
+  width:80%; 
 }
 
 .RunBuddy {
-    background-image: url("../Assets/images/latte art.jpg");
+ 
+  height: 600px;
+  width:80%; 
 }
 
 
